--- a/graph.html
+++ b/graph.html
@@ -631,7 +631,7 @@
     <script src="js/app.js?v=25"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js').catch(err => console.log('SW registration failed:', err));
+            navigator.serviceWorker.register('sw.js').catch(err => console.log('SW registration failed:', err));
         }
     </script>
 </body>
